fixing styling that looks like trash on smaller monitor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,15 +61,18 @@ textarea{
   /* border-bottom: white solid 1px; */
 }
 
+
+/* HIDEOUS on small screen, fix this */
 textarea{
   width: 100%;
-  height: calc(5vh + 8px);
+  /* height: calc(5vh + 8px); */
+  height: 60px;
   position: absolute;
   top: 50%;
   padding: 2%;
-  margin-top: calc((-5vh - 2px) / 2);
-  
-  border-bottom: white solid 4px;
+  margin-top: calc((-60px + 2px) / 2);
+  overflow: hidden;
+  border-bottom: white solid 2px;
 }
 
 /* add a save icon? */
@@ -80,19 +83,25 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
-  height: calc(5vh + 6px);
-  margin-top: calc((-5vh - 2px) / 2);
+  /* height: calc(5vh + 8px); */
+  height: 60px;
+  margin-top: calc((-60px + 2px) / 2);
   width: 100px;
-  padding: 4%;
+  padding: 6%;
   position: absolute;
   top: 50%;
   font-weight: bolder;
 }
 
 .saveBtn:hover {
-  font-size: 20px;
+  font-size: 25px;
   width: 115px;
-  transition: all .3s ease-in-out;
+  transition: font-size .4s ease-in;
+  transition: width .3s ease-in;
+}
+
+.saveBtn:active{
+  background-color: rgb(7, 116, 141);
 }
 
 .container{
@@ -101,14 +110,14 @@ textarea{
 }
 
 table{
-  width:85%;
+  width: 85%;
   margin: 0 auto;
   border-collapse: separate;
 }
 
 td:first-child{
   padding: 2%;
-  height: 5vh;
+  height: 60px;
 }
 
 td:first-child{
